# stock-ticker

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PACKAGING.md  README.md  build.bat  config.example.json  pyproject.toml  requirements.txt  run.py  stock-glance.spec
stock_glance/: __init__.py  __main__.py  autostart.py  config.py  hotkey.py  quotes.py  settings.py  taskbar.py  tray.py  widget.py
